[New Feature][Issue-77] Adds messages.html screenshot

--- a/examples/screenshots/messages.html
+++ b/examples/screenshots/messages.html
@@ -10,25 +10,150 @@
 </head>
 <body class="rs-responsive">
   <div style="padding: 40px;">
+    <h3>Plain Text</h3>  
     <div class="rs-message rs-status-ok">
-      <i class="rs-message-icon rs-status-ok"></i>
-      <div class="rs-message-title">Initial success statement goes here.</div>
-      <div class="rs-message-description">Descriptive information belongs in an ever-so-slightly longer message here. <a href="#">Example External Link <i class="rs-icon-external"></i></a></div>
+      <div class="rs-message-content">
+        This is a success message without a title or description.
+      </div>
     </div>
     <div class="rs-message rs-status-warning">
-      <i class="rs-message-icon rs-status-warning"></i>
-      <div class="rs-message-title">Initial warning statement goes here.</div>
-      <div class="rs-message-description">Descriptive information belongs in an ever-so-slightly longer message here. <a href="#">Example External Link <i class="rs-icon-external"></i></a></div>
+      <div class="rs-message-content">
+        This is a warning message without a title or description.
+      </div>
     </div>
     <div class="rs-message rs-status-error">
-      <i class="rs-message-icon rs-status-error"></i>
-      <div class="rs-message-title">Initial error statement goes here.</div>
-      <div class="rs-message-description">Descriptive information belongs in an ever-so-slightly longer message here. <a href="#">Example External Link <i class="rs-icon-external"></i></a></div>
+      <div class="rs-message-content">
+        This is an error message without a title or description.
+      </div>
     </div>
     <div class="rs-message rs-status-info">
-      <i class="rs-message-icon rs-status-info"></i>
-      <div class="rs-message-title">Initial info statement goes here.</div>
-      <div class="rs-message-description">Descriptive information belongs in an ever-so-slightly longer message here. <a href="#">Example External Link <i class="rs-icon-external"></i></a></div>
+      <div class="rs-message-content">
+        This is an info message without a title or description.
+      </div>
+    </div>
+    <br>
+    <hr>
+    <h3>With Title and Description</h3>  
+    <div class="rs-message rs-status-ok">
+      <div class="rs-message-content">
+        <div class="rs-message-title">Title success statement.</div>
+        <div class="rs-message-description">Descriptive information in a nice, short message. <a href="#">Example External Link <i class="rs-icon-external"></i></a></div>
+      </div>
+    </div>
+    <div class="rs-message rs-status-warning">
+      <div class="rs-message-content">
+        <div class="rs-message-title">Title warning statement.</div>
+        <div class="rs-message-description">Descriptive information in a nice, short message. <a href="#">Example External Link <i class="rs-icon-external"></i></a></div>
+      </div>
+    </div>
+    <div class="rs-message rs-status-error">
+      <div class="rs-message-content">
+        <div class="rs-message-title">Title error statement.</div>
+        <div class="rs-message-description">Descriptive information in a nice, short message. <a href="#">Example External Link <i class="rs-icon-external"></i></a></div>
+      </div>
+    </div>
+    <div class="rs-message rs-status-info">
+      <div class="rs-message-content">
+        <div class="rs-message-title">Title info statement.</div>
+        <div class="rs-message-description">Descriptive information in a nice, short message. <a href="#">Example External Link <i class="rs-icon-external"></i></a></div>
+      </div>
+    </div>
+    <br>
+    <hr>
+    <h3>With Close Buttons</h3>  
+    <div class="rs-message rs-status-ok">
+      <button type="button" class="rs-close"></button>
+      <div class="rs-message-content">
+        <div class="rs-message-title">Title success statement.</div>
+        <div class="rs-message-description">Descriptive information in a nice, short message. <a href="#">Example External Link <i class="rs-icon-external"></i></a></div>
+      </div>
+    </div>
+    <div class="rs-message rs-status-warning">
+      <button type="button" class="rs-close"></button>
+      <div class="rs-message-content">
+        <div class="rs-message-title">Title warning statement.</div>
+        <div class="rs-message-description">Descriptive information in a nice, short message. <a href="#">Example External Link <i class="rs-icon-external"></i></a></div>
+      </div>
+    </div>
+    <div class="rs-message rs-status-error">
+      <button type="button" class="rs-close"></button>
+      <div class="rs-message-content">
+        <div class="rs-message-title">Title error statement.</div>
+        <div class="rs-message-description">Descriptive information in a nice, short message. <a href="#">Example External Link <i class="rs-icon-external"></i></a></div>
+      </div>
+    </div>
+    <div class="rs-message rs-status-info">
+      <button type="button" class="rs-close"></button>
+      <div class="rs-message-content">
+        <div class="rs-message-title">Title info statement.</div>
+        <div class="rs-message-description">Descriptive information in a nice, short message. <a href="#">Example External Link <i class="rs-icon-external"></i></a></div>
+      </div>
+    </div>
+    <br>
+    <hr>
+    <h3>With Status Icons</h3>  
+    <div class="rs-message rs-status-ok">
+      <i class="rs-message-icon"></i>
+      <div class="rs-message-content">
+        <div class="rs-message-title">Title success statement.</div>
+        <div class="rs-message-description">Descriptive information in a nice, short message. <a href="#">Example External Link <i class="rs-icon-external"></i></a></div>
+      </div>
+    </div>
+    <div class="rs-message rs-status-warning">
+      <i class="rs-message-icon"></i>
+      <div class="rs-message-content">
+        <div class="rs-message-title">Title warning statement.</div>
+        <div class="rs-message-description">Descriptive information in a nice, short message. <a href="#">Example External Link <i class="rs-icon-external"></i></a></div>
+      </div>
+    </div>
+    <div class="rs-message rs-status-error">
+      <i class="rs-message-icon"></i>
+      <div class="rs-message-content">
+        <div class="rs-message-title">Title error statement.</div>
+        <div class="rs-message-description">Descriptive information in a nice, short message. <a href="#">Example External Link <i class="rs-icon-external"></i></a></div>
+      </div>
+    </div>
+    <div class="rs-message rs-status-info">
+      <i class="rs-message-icon"></i>
+      <div class="rs-message-content">
+        <div class="rs-message-title">Title info statement.</div>
+        <div class="rs-message-description">Descriptive information in a nice, short message. <a href="#">Example External Link <i class="rs-icon-external"></i></a></div>
+      </div>
+    </div>
+    <br>
+    <hr>
+    <h3>With Status Icons and Close Buttons</h3>  
+    <div class="rs-message rs-status-ok">
+      <i class="rs-message-icon"></i>
+      <button type="button" class="rs-close"></button>
+      <div class="rs-message-content">
+        <div class="rs-message-title">Title success statement.</div>
+        <div class="rs-message-description">Descriptive information in a nice, short message. <a href="#">Example External Link <i class="rs-icon-external"></i></a></div>
+      </div>
+    </div>
+    <div class="rs-message rs-status-warning">
+      <i class="rs-message-icon"></i>
+      <button type="button" class="rs-close"></button>
+      <div class="rs-message-content">
+        <div class="rs-message-title">Title warning statement.</div>
+        <div class="rs-message-description">Descriptive information in a nice, short message. <a href="#">Example External Link <i class="rs-icon-external"></i></a></div>
+      </div>
+    </div>
+    <div class="rs-message rs-status-error">
+      <i class="rs-message-icon"></i>
+      <button type="button" class="rs-close"></button>
+      <div class="rs-message-content">
+        <div class="rs-message-title">Title error statement.</div>
+        <div class="rs-message-description">Descriptive information in a nice, short message. <a href="#">Example External Link <i class="rs-icon-external"></i></a></div>
+      </div>
+    </div>
+    <div class="rs-message rs-status-info">
+      <i class="rs-message-icon"></i>
+      <button type="button" class="rs-close"></button>
+      <div class="rs-message-content">
+        <div class="rs-message-title">Title info statement.</div>
+        <div class="rs-message-description">Descriptive information in a nice, short message. <a href="#">Example External Link <i class="rs-icon-external"></i></a></div>
+      </div>
     </div>
   </div>
 </body>
