[New Feature][Issue-47] Changes rs-modal-blocker class to rs-overlay

--- a/examples/screenshots/focus-panel-modal.html
+++ b/examples/screenshots/focus-panel-modal.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" type="text/css" href="/canon.css">
 </head>
 <body class="rs-responsive">
-	<div class="rs-modal-blocker"></div>
+	<div class="rs-overlay"></div>
 	<div class="rs-wrapper">
 		<div class="rs-focus-panel rs-focus-panel-large"></div>
 	</div>
