[New Feature][Blue Progress Bar] removes <h4> tags and uses rs-progress-labels for titling in the screenshot html

--- a/examples/screenshots/progress-bar.html
+++ b/examples/screenshots/progress-bar.html
@@ -12,7 +12,7 @@
   <div style="width: 500px; margin: 0 auto; padding: 40px;">
 
     <h2>Green - Ok</h2>
-    <h4>Normal</h4>
+    <span class="rs-progress-label">Normal</span>
     <div class="rs-progress">
       <div class="rs-progress-inner">
         <div class="rs-segment" style="width: 50%">
@@ -23,7 +23,7 @@
 
     <br>
 
-    <h4>Working</h4>
+    <span class="rs-progress-label">Working</span>
     <div class="rs-progress">
       <div class="rs-progress-inner">
         <div class="rs-segment" style="width: 50%">
@@ -34,8 +34,7 @@
 
     <br>
 
-    <h4>Multi-Step</h4>
-
+    <span class="rs-progress-label">Multi-Step</span>
     <div class="rs-progress">
       <div class="rs-progress-inner">
         <div class="rs-segment" style="width: 25%">
@@ -63,8 +62,8 @@
           <div class="rs-bar rs-status-ok"></div>
         </div>
       </div>
-      <span class="rs-progress-label">xSmall</span>
     </div>
+    <span class="rs-progress-label">xSmall</span>
 
     <br>
 
@@ -74,8 +73,8 @@
           <div class="rs-bar rs-status-ok"></div>
         </div>
       </div>
-      <span class="rs-progress-label">Small</span>
     </div>
+    <span class="rs-progress-label">Small</span>
 
     <br>
 
@@ -85,8 +84,8 @@
           <div class="rs-bar rs-status-ok"></div>
         </div>
       </div>
-      <span class="rs-progress-label">Medium</span>
     </div>
+    <span class="rs-progress-label">Medium</span>
 
     <br>
 
@@ -96,8 +95,8 @@
           <div class="rs-bar rs-status-ok"></div>
         </div>
       </div>
-      <span class="rs-progress-label">Large</span>
     </div>
+    <span class="rs-progress-label">Large</span>
 
     <br>
 
@@ -107,10 +106,10 @@
           <div class="rs-bar rs-status-ok"></div>
         </div>
       </div>
-      <span class="rs-progress-label">xLarge</span>
     </div>
+    <span class="rs-progress-label">xLarge</span>
 
-    <br>
+    <br><br>
 
     <h4>Sizes - Working</h4>
 
@@ -120,8 +119,8 @@
           <div class="rs-bar rs-status-ok rs-bar-striped"></div>
         </div>
       </div>
-      <span class="rs-progress-label">xSmall</span>
     </div>
+    <span class="rs-progress-label">xSmall</span>
 
     <br>
 
@@ -131,8 +130,8 @@
           <div class="rs-bar rs-status-ok rs-bar-striped"></div>
         </div>
       </div>
-      <span class="rs-progress-label">Small</span>
     </div>
+    <span class="rs-progress-label">Small</span>
 
     <br>
 
@@ -142,8 +141,8 @@
           <div class="rs-bar rs-status-ok rs-bar-striped"></div>
         </div>
       </div>
-      <span class="rs-progress-label">Medium</span>
     </div>
+    <span class="rs-progress-label">Medium</span>
 
     <br>
 
@@ -153,8 +152,8 @@
           <div class="rs-bar rs-status-ok rs-bar-striped"></div>
         </div>
       </div>
-      <span class="rs-progress-label">Large</span>
     </div>
+    <span class="rs-progress-label">Large</span>
 
     <br>
 
@@ -164,15 +163,14 @@
           <div class="rs-bar rs-status-ok rs-bar-striped"></div>
         </div>
       </div>
-      <span class="rs-progress-label">xLarge</span>
     </div>
+    <span class="rs-progress-label">xLarge</span>
 
-    <br><hr><br>
+    <br><br><hr>
 
     <h2>Orange - Processing</h2>
 
-    <h4>Normal</h4>
-
+    <span class="rs-progress-label">Normal</span>
     <div class="rs-progress">
       <div class="rs-progress-inner">
         <div class="rs-segment" style="width: 50%">
@@ -182,8 +180,8 @@
     </div>
 
     <br>
-    <h4>Working</h4>
 
+    <span class="rs-progress-label">Working</span>
     <div class="rs-progress">
       <div class="rs-progress-inner">
         <div class="rs-segment" style="width: 50%">
@@ -194,24 +192,20 @@
 
     <br>
 
-    <h4>Multi-Step</h4>
+    <span class="rs-progress-label">Multi-Step</span>
     <div class="rs-progress">
       <div class="rs-progress-inner">
         <div class="rs-segment" style="width: 25%">
           <div class="rs-bar rs-status-warning"></div>
           <div class="rs-caption">Step One</div>
         </div>
-        <div class="rs-segment" style="width: 25%">
+        <div class="rs-segment" style="width: 35%">
           <div class="rs-bar rs-status-warning"></div>
           <div class="rs-caption">Step Two</div>
         </div>
-        <div class="rs-segment" style="width: 25%">
+        <div class="rs-segment" style="width: 40%">
           <div class="rs-bar rs-status-warning rs-bar-striped"></div>
           <div class="rs-caption">Step Three</div>
-        </div>
-        <div class="rs-segment" style="width: 25%">
-          <div class="rs-bar"></div>
-          <div class="rs-caption">Step Four</div>
         </div>
       </div>
     </div>
@@ -226,8 +220,8 @@
           <div class="rs-bar rs-status-warning"></div>
         </div>
       </div>
-      <span class="rs-progress-label">xSmall</span>
     </div>
+    <span class="rs-progress-label">xSmall</span>
 
     <br>
 
@@ -237,8 +231,8 @@
           <div class="rs-bar rs-status-warning"></div>
         </div>
       </div>
-      <span class="rs-progress-label">Small</span>
     </div>
+    <span class="rs-progress-label">Small</span>
 
     <br>
 
@@ -248,8 +242,8 @@
           <div class="rs-bar rs-status-warning"></div>
         </div>
       </div>
-      <span class="rs-progress-label">Medium</span>
     </div>
+    <span class="rs-progress-label">Medium</span>
 
     <br>
 
@@ -259,8 +253,8 @@
           <div class="rs-bar rs-status-warning"></div>
         </div>
       </div>
-      <span class="rs-progress-label">Large</span>
     </div>
+    <span class="rs-progress-label">Large</span>
 
     <br>
 
@@ -270,10 +264,10 @@
           <div class="rs-bar rs-status-warning"></div>
         </div>
       </div>
-      <span class="rs-progress-label">xLarge</span>
     </div>
+    <span class="rs-progress-label">xLarge</span>
 
-    <br>
+    <br><br>
 
     <h4>Sizes - Working</h4>
 
@@ -283,8 +277,8 @@
           <div class="rs-bar rs-status-warning rs-bar-striped"></div>
         </div>
       </div>
-      <span class="rs-progress-label">xSmall</span>
     </div>
+    <span class="rs-progress-label">xSmall</span>
 
     <br>
 
@@ -294,8 +288,8 @@
           <div class="rs-bar rs-status-warning rs-bar-striped"></div>
         </div>
       </div>
-      <span class="rs-progress-label">Small</span>
     </div>
+    <span class="rs-progress-label">Small</span>
 
     <br>
 
@@ -305,8 +299,8 @@
           <div class="rs-bar rs-status-warning rs-bar-striped"></div>
         </div>
       </div>
-      <span class="rs-progress-label">Medium</span>
     </div>
+    <span class="rs-progress-label">Medium</span>
 
     <br>
 
@@ -316,8 +310,8 @@
           <div class="rs-bar rs-status-warning rs-bar-striped"></div>
         </div>
       </div>
-      <span class="rs-progress-label">Large</span>
     </div>
+    <span class="rs-progress-label">Large</span>
 
     <br>
 
@@ -327,13 +321,13 @@
           <div class="rs-bar rs-status-warning rs-bar-striped"></div>
         </div>
       </div>
-      <span class="rs-progress-label">xLarge</span>
     </div>
+    <span class="rs-progress-label">xLarge</span>
 
-    <br><hr><br>
+    <br><br><hr>
     <h2>Red - Error</h2>
 
-    <h4>Normal</h4>
+    <span class="rs-progress-label">Normal</span>
     <div class="rs-progress">
       <div class="rs-progress-inner">
         <div class="rs-segment" style="width: 50%">
@@ -342,25 +336,33 @@
       </div>
     </div>
 
-    <br><h4>Multi-Step</h4>
+    <br>
 
+    <span class="rs-progress-label">Working</span>
+    <div class="rs-progress">
+      <div class="rs-progress-inner">
+        <div class="rs-segment" style="width: 50%">
+          <div class="rs-bar rs-status-error rs-bar-striped"></div>
+        </div>
+      </div>
+    </div>
+
+    <br>
+
+    <span class="rs-progress-label">Multi-Step</span>
     <div class="rs-progress">
       <div class="rs-progress-inner">
         <div class="rs-segment" style="width: 25%">
           <div class="rs-bar rs-status-error"></div>
           <div class="rs-caption">Step One</div>
         </div>
-        <div class="rs-segment" style="width: 25%">
+        <div class="rs-segment" style="width: 35%">
           <div class="rs-bar rs-status-error"></div>
           <div class="rs-caption">Step Two</div>
         </div>
-        <div class="rs-segment" style="width: 25%">
+        <div class="rs-segment" style="width: 40%">
           <div class="rs-bar rs-status-error rs-bar-striped"></div>
           <div class="rs-caption">Step Three</div>
-        </div>
-        <div class="rs-segment" style="width: 25%">
-          <div class="rs-bar"></div>
-          <div class="rs-caption">Step Four</div>
         </div>
       </div>
     </div>
@@ -375,8 +377,8 @@
           <div class="rs-bar rs-status-error"></div>
         </div>
       </div>
-      <span class="rs-progress-label">xSmall</span>
     </div>
+    <span class="rs-progress-label">xSmall</span>
 
     <br>
 
@@ -386,8 +388,8 @@
           <div class="rs-bar rs-status-error"></div>
         </div>
       </div>
-      <span class="rs-progress-label">Small</span>
     </div>
+    <span class="rs-progress-label">Small</span>
 
     <br>
 
@@ -397,8 +399,8 @@
           <div class="rs-bar rs-status-error"></div>
         </div>
       </div>
-      <span class="rs-progress-label">Medium</span>
     </div>
+    <span class="rs-progress-label">Medium</span>
 
     <br>
 
@@ -408,8 +410,8 @@
           <div class="rs-bar rs-status-error"></div>
         </div>
       </div>
-      <span class="rs-progress-label">Large</span>
     </div>
+    <span class="rs-progress-label">Large</span>
 
     <br>
 
@@ -419,10 +421,10 @@
           <div class="rs-bar rs-status-error"></div>
         </div>
       </div>
-      <span class="rs-progress-label">xLarge</span>
     </div>
+    <span class="rs-progress-label">xLarge</span>
 
-    <br>
+    <br><br>
 
     <h4>Sizes - Working</h4>
 
@@ -432,8 +434,8 @@
           <div class="rs-bar rs-status-error rs-bar-striped"></div>
         </div>
       </div>
-      <span class="rs-progress-label">xSmall</span>
     </div>
+    <span class="rs-progress-label">xSmall</span>
 
     <br>
 
@@ -443,8 +445,8 @@
           <div class="rs-bar rs-status-error rs-bar-striped"></div>
         </div>
       </div>
-      <span class="rs-progress-label">Small</span>
     </div>
+    <span class="rs-progress-label">Small</span>
 
     <br>
 
@@ -454,8 +456,8 @@
           <div class="rs-bar rs-status-error rs-bar-striped"></div>
         </div>
       </div>
-      <span class="rs-progress-label">Medium</span>
     </div>
+    <span class="rs-progress-label">Medium</span>
 
     <br>
 
@@ -465,8 +467,8 @@
           <div class="rs-bar rs-status-error rs-bar-striped"></div>
         </div>
       </div>
-      <span class="rs-progress-label">Large</span>
     </div>
+    <span class="rs-progress-label">Large</span>
 
     <br>
 
@@ -476,40 +478,48 @@
           <div class="rs-bar rs-status-error rs-bar-striped"></div>
         </div>
       </div>
-      <span class="rs-progress-label">xLarge</span>
     </div>
+    <span class="rs-progress-label">xLarge</span>
 
-    <br><hr><br>
+    <br><br><hr>
     <h2>Blue - Neutral</h2>
 
-    <h4>Normal</h4>
+    <span class="rs-progress-label">Normal</span>
     <div class="rs-progress">
       <div class="rs-progress-inner">
         <div class="rs-segment" style="width: 50%">
-          <div class="rs-bar rs-status-neutral"></div>
+          <div class="rs-bar rs-status-info"></div>
         </div>
       </div>
     </div>
 
-    <br><h4>Multi-Step</h4>
+    <br>
 
+    <span class="rs-progress-label">Working</span>
+    <div class="rs-progress">
+      <div class="rs-progress-inner">
+        <div class="rs-segment" style="width: 50%">
+          <div class="rs-bar rs-status-info rs-bar-striped"></div>
+        </div>
+      </div>
+    </div>
+
+    <br>
+
+    <span class="rs-progress-label">Multi-Step</span>
     <div class="rs-progress">
       <div class="rs-progress-inner">
         <div class="rs-segment" style="width: 25%">
-          <div class="rs-bar rs-status-neutral"></div>
+          <div class="rs-bar rs-status-info"></div>
           <div class="rs-caption">Step One</div>
         </div>
-        <div class="rs-segment" style="width: 25%">
-          <div class="rs-bar rs-status-neutral"></div>
+        <div class="rs-segment" style="width: 35%">
+          <div class="rs-bar rs-status-info"></div>
           <div class="rs-caption">Step Two</div>
         </div>
-        <div class="rs-segment" style="width: 25%">
-          <div class="rs-bar rs-status-neutral rs-bar-striped"></div>
+        <div class="rs-segment" style="width: 40%">
+          <div class="rs-bar rs-status-info rs-bar-striped"></div>
           <div class="rs-caption">Step Three</div>
-        </div>
-        <div class="rs-segment" style="width: 25%">
-          <div class="rs-bar"></div>
-          <div class="rs-caption">Step Four</div>
         </div>
       </div>
     </div>
@@ -521,112 +531,114 @@
     <div class="rs-progress rs-progress-xsmall">
       <div class="rs-progress-inner">
         <div class="rs-segment" style="width: 50%">
-          <div class="rs-bar rs-status-neutral"></div>
+          <div class="rs-bar rs-status-info"></div>
         </div>
       </div>
-      <span class="rs-progress-label">xSmall</span>
     </div>
+    <span class="rs-progress-label">xSmall</span>
 
     <br>
 
     <div class="rs-progress rs-progress-small">
       <div class="rs-progress-inner">
         <div class="rs-segment" style="width: 50%">
-          <div class="rs-bar rs-status-neutral"></div>
+          <div class="rs-bar rs-status-info"></div>
         </div>
       </div>
-      <span class="rs-progress-label">Small</span>
     </div>
+    <span class="rs-progress-label">Small</span>
 
     <br>
 
     <div class="rs-progress rs-progress-medium">
       <div class="rs-progress-inner">
         <div class="rs-segment" style="width: 50%">
-          <div class="rs-bar rs-status-neutral"></div>
+          <div class="rs-bar rs-status-info"></div>
         </div>
       </div>
-      <span class="rs-progress-label">Medium</span>
     </div>
+    <span class="rs-progress-label">Medium</span>
 
     <br>
 
     <div class="rs-progress rs-progress-large">
       <div class="rs-progress-inner">
         <div class="rs-segment" style="width: 50%">
-          <div class="rs-bar rs-status-neutral"></div>
+          <div class="rs-bar rs-status-info"></div>
         </div>
       </div>
-      <span class="rs-progress-label">Large</span>
     </div>
+    <span class="rs-progress-label">Large</span>
 
     <br>
 
     <div class="rs-progress rs-progress-xlarge">
       <div class="rs-progress-inner">
         <div class="rs-segment" style="width: 50%">
-          <div class="rs-bar rs-status-neutral"></div>
+          <div class="rs-bar rs-status-info"></div>
         </div>
       </div>
-      <span class="rs-progress-label">xLarge</span>
     </div>
+    <span class="rs-progress-label">xLarge</span>
 
-    <br>
+    <br><br>
 
     <h4>Sizes - Working</h4>
 
     <div class="rs-progress rs-progress-xsmall">
       <div class="rs-progress-inner">
         <div class="rs-segment" style="width: 50%">
-          <div class="rs-bar rs-status-neutral rs-bar-striped"></div>
+          <div class="rs-bar rs-status-info rs-bar-striped"></div>
         </div>
       </div>
-      <span class="rs-progress-label">xSmall</span>
     </div>
+    <span class="rs-progress-label">xSmall</span>
 
     <br>
 
     <div class="rs-progress rs-progress-small">
       <div class="rs-progress-inner">
         <div class="rs-segment" style="width: 50%">
-          <div class="rs-bar rs-status-neutral rs-bar-striped"></div>
+          <div class="rs-bar rs-status-info rs-bar-striped"></div>
         </div>
       </div>
-      <span class="rs-progress-label">Small</span>
     </div>
+    <span class="rs-progress-label">Small</span>
 
     <br>
 
     <div class="rs-progress rs-progress-medium">
       <div class="rs-progress-inner">
         <div class="rs-segment" style="width: 50%">
-          <div class="rs-bar rs-status-neutral rs-bar-striped"></div>
+          <div class="rs-bar rs-status-info rs-bar-striped"></div>
         </div>
       </div>
-      <span class="rs-progress-label">Medium</span>
     </div>
+    <span class="rs-progress-label">Medium</span>
 
     <br>
 
     <div class="rs-progress rs-progress-large">
       <div class="rs-progress-inner">
         <div class="rs-segment" style="width: 50%">
-          <div class="rs-bar rs-status-neutral rs-bar-striped"></div>
+          <div class="rs-bar rs-status-info rs-bar-striped"></div>
         </div>
       </div>
-      <span class="rs-progress-label">Large</span>
     </div>
+    <span class="rs-progress-label">Large</span>
 
     <br>
 
     <div class="rs-progress rs-progress-xlarge">
       <div class="rs-progress-inner">
         <div class="rs-segment" style="width: 50%">
-          <div class="rs-bar rs-status-neutral rs-bar-striped"></div>
+          <div class="rs-bar rs-status-info rs-bar-striped"></div>
         </div>
       </div>
-      <span class="rs-progress-label">xLarge</span>
-    </div>    
+    </div>
+    <span class="rs-progress-label">xLarge</span>
+
+    <br><br><hr>    
 
   </div>
 </body>
