[New Feature][issue-17] Adds markup for headers and clear links
Headers include:
	- rs-facets-header
	- rs-facets-section-header

Clear Links:
	- rs-clear-facets-link

--- a/examples/screenshots/facets.html
+++ b/examples/screenshots/facets.html
@@ -14,17 +14,17 @@
     <div class="rs-sidebar rs-facets">
       <div class="rs-inner">
         <!-- start facet markup -->
-
-        <h2 class="rs-page-title">Cloud Servers</h2>
-
-        <div class="rs-facet-item selected">
-          <div class="rs-facet-label">All Servers</div>
-          <div class="rs-facet-count">(37)</div>
+        <div class="rs-facets-header">
+          <div class="rs-clear-facets-link">clear all</div>
+          <div class="rs-facets-title">Filter {Product}s</div>
         </div>
 
         <!-- example with divs -->
         <div class="rs-facet-section">
-          <div class="rs-facet-section-title">Icon Example</div>
+          <div class="rs-facets-section-header">
+            <div class="rs-clear-facets-link">clear</div>
+            <div class="rs-facet-section-title">Icon Example</div>
+          </div>
           <div class="rs-facet-section-body">
             <ul class="rs-facet-list">
               <li class="rs-facet-item">
@@ -50,7 +50,10 @@
         </div>
 
         <div class="rs-facet-section">
-          <div class="rs-facet-section-title">Section Default - Collapsed</div>
+          <div class="rs-facets-section-header">
+            <div class="rs-clear-facets-link">clear</div>
+            <div class="rs-facet-section-title">Collapsed </div>
+          </div>
           <div class="rs-facet-section-body">
             <ul class="rs-facet-list">
               <li class="rs-facet-item">
@@ -110,7 +113,10 @@
 
         <!-- Example Facet List Expanded -->
         <div class="rs-facet-section expanded">
-          <div class="rs-facet-section-title">Section Expanded</div>
+          <div class="rs-facets-section-header">
+            <div class="rs-clear-facets-link">clear</div>
+            <div class="rs-facet-section-title">Expanded</div>
+          </div>
           <div class="rs-facet-section-body">
             <ul class="rs-facet-list">
               <li class="rs-facet-item">
