Add disabled state for table status.

--- a/examples/screenshots/list-table.html
+++ b/examples/screenshots/list-table.html
@@ -598,6 +598,64 @@
               </ul>
             </td>
           </tr>
+          <tr>
+            <td class="rs-table-status rs-table-status-disabled"></td>
+            <td class="rs-table-checkbox"><input type="checkbox"></td>
+            <td class="rs-table-cog"><button class="rs-cog"></button></td>
+            <td class="rs-table-radio"><input type="radio" name="selection"></td>
+            <td class="rs-table-delete"><button class="rs-delete"></button></td>
+            <td class="rs-table-link"><a href="#">Body</a></td>
+            <td class="rs-table-select">
+              <select>
+                <option>One</option>
+                <option>Two</option>
+                <option>Three</option>
+              </select>
+            </td>
+            <td class="rs-table-text">Body</td>
+            <td class="rs-table-text">Body</td>
+            <td class="rs-table-input"><input type="text"></td>
+            <td class="rs-table-status-list">
+              <ul class="rs-status-list">
+                <li class="rs-status-list-item">
+                  <div class="rs-icon-status rs-status-ok"></div>
+                </li>
+                <li class="rs-status-list-item">
+                  <div class="rs-icon-status rs-status-ok"></div>
+                </li>
+                <li class="rs-status-list-item">
+                  <div class="rs-icon-status rs-status-ok"></div>
+                </li>
+                <li class="rs-status-list-item">
+                  <div class="rs-icon-status rs-status-warning"></div>
+                </li>
+                <li class="rs-status-list-item">
+                  <div class="rs-icon-status rs-status-warning"></div>
+                </li>
+                <li class="rs-status-list-item">
+                  <div class="rs-icon-status rs-status-warning"></div>
+                </li>
+                <li class="rs-status-list-item">
+                  <div class="rs-icon-status rs-status-error"></div>
+                </li>
+                <li class="rs-status-list-item">
+                  <div class="rs-icon-status rs-status-error"></div>
+                </li>
+                <li class="rs-status-list-item">
+                  <div class="rs-icon-status rs-status-error"></div>
+                </li>
+                <li class="rs-status-list-item">
+                  <div class="rs-icon-status rs-status-disabled"></div>
+                </li>
+                <li class="rs-status-list-item">
+                  <div class="rs-icon-status rs-status-disabled"></div>
+                </li>
+                <li class="rs-status-list-item">
+                  <div class="rs-icon-status rs-status-disabled"></div>
+                </li>
+              </ul>
+            </td>
+          </tr>
         </tbody>
       </table>
     </div>
