--- a/examples/screenshots/facets.html
+++ b/examples/screenshots/facets.html
@@ -4,32 +4,32 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 
-  <title>Screenshot | Facets</title>
+  <title>Screenshot | facet</title>
 
   <link rel="stylesheet" type="text/css" href="/canon.css">
 </head>
 <body class="rs-responsive" style="background: #fff;">
   <div style="padding: 40px;">
 
-    <div class="rs-sidebar rs-facets">
+    <div class="rs-sidebar rs-facet">
       <div class="rs-inner">
         <!-- start facet markup -->
-        <div class="rs-facets-header">
-          <div class="rs-clear-facets-link">clear all</div>
-          <div class="rs-facets-title">Filter {Product}s</div>
+        <div class="rs-facet-header">
+          <div class="rs-facet-clear-link">clear all</div>
+          <div class="rs-facet-title">Filter {Product}s</div>
         </div>
 
         <!-- example with divs -->
         <div class="rs-facet-section">
-          <div class="rs-facets-section-header">
-            <div class="rs-clear-facets-link">clear</div>
-            <div class="rs-facet-section-title">Icon Example</div>
+          <div class="rs-facet-section-header">
+            <div class="rs-facet-clear-link">clear</div>
+            <div class="rs-facet-section-title">Status</div>
           </div>
           <div class="rs-facet-section-body">
             <ul class="rs-facet-list">
               <li class="rs-facet-item">
                 <i class="rs-status-error"></i>
-                <div class="rs-facet-label">this is a truncated label example</div>
+                <div class="rs-facet-label">Truncated example with status icon</div>
                 <div class="rs-facet-count">(12k)</div>
               </li>
               <li class="rs-facet-item">
@@ -42,22 +42,19 @@
                 <div class="rs-facet-label">Rebooting</div>
                 <div class="rs-facet-count">(2)</div>
               </li>
-              <li class="rs-facet-section-toggle">
-                <i class="rs-arrow"></i>more
-              </li>
             </ul>
           </div>
         </div>
 
         <div class="rs-facet-section">
-          <div class="rs-facets-section-header">
-            <div class="rs-clear-facets-link">clear</div>
-            <div class="rs-facet-section-title">Collapsed </div>
+          <div class="rs-facet-section-header">
+            <div class="rs-facet-clear-link">clear</div>
+            <div class="rs-facet-section-title">Styles </div>
           </div>
           <div class="rs-facet-section-body">
             <ul class="rs-facet-list">
               <li class="rs-facet-item">
-                <div class="rs-facet-label">this is a truncated label example</div>
+                <div class="rs-facet-label">Truncated facet Label example</div>
                 <div class="rs-facet-count">(11)</div>
               </li>
               <li class="rs-facet-item hover">
@@ -69,106 +66,16 @@
                 <div class="rs-facet-count">(12)</div>
               </li>
               <li class="rs-facet-item disabled">
-                <div class="rs-facet-label">Disabled Facet</div>
+                <div class="rs-facet-label">Disabled Style</div>
                 <div class="rs-facet-count">(0)</div>
               </li>
-              <li class="rs-facet-item">
-                <div class="rs-facet-label">staging</div>
-                <div class="rs-facet-count">(11)</div>
-              </li>
-              <li class="rs-facet-item">
-                <div class="rs-facet-label">QE</div>
-                <div class="rs-facet-count">(8)</div>
-              </li>
-              <li class="rs-facet-item">
-                <div class="rs-facet-label">design</div>
-                <div class="rs-facet-count">(12)</div>
-              </li>
-              <li class="rs-facet-item">
-                <div class="rs-facet-label">billing</div>
-                <div class="rs-facet-count">(6)</div>
-              </li>
-              <li class="rs-facet-item">
-                <div class="rs-facet-label">utiliy</div>
-                <div class="rs-facet-count">(3)</div>
-              </li>
-              <li class="rs-facet-item">
-                <div class="rs-facet-label">comms</div>
-                <div class="rs-facet-count">(8)</div>
-              </li>
-              <li class="rs-facet-item">
-                <div class="rs-facet-label">marketing</div>
-                <div class="rs-facet-count">(8)</div>
-              </li>
-              <li class="rs-facet-item">
-                <div class="rs-facet-label">sales</div>
-                <div class="rs-facet-count">(8)</div>
+              <li class="rs-facet-item disabled">
+                <i class="rs-status-ok"></i>
+                <div class="rs-facet-label">Disabled with Icon</div>
+                <div class="rs-facet-count">(0)</div>
               </li>
               <li class="rs-facet-section-toggle">
-                <i class="rs-arrow"></i>more
-              </li>
-            </ul>
-          </div>
-        </div>
-
-        <!-- Example Facet List Expanded -->
-        <div class="rs-facet-section expanded">
-          <div class="rs-facets-section-header">
-            <div class="rs-clear-facets-link">clear</div>
-            <div class="rs-facet-section-title">Expanded</div>
-          </div>
-          <div class="rs-facet-section-body">
-            <ul class="rs-facet-list">
-              <li class="rs-facet-item">
-                <div class="rs-facet-label">dev</div>
-                <div class="rs-facet-count">(11)</div>
-              </li>
-              <li class="rs-facet-item">
-                <div class="rs-facet-label">monitor</div>
-                <div class="rs-facet-count">(8)</div>
-              </li>
-              <li class="rs-facet-item">
-                <div class="rs-facet-label">production</div>
-                <div class="rs-facet-count">(12)</div>
-              </li>
-              <li class="rs-facet-item">
-                <div class="rs-facet-label">LUg</div>
-                <div class="rs-facet-count">(6)</div>
-              </li>
-              <li class="rs-facet-item">
-                <div class="rs-facet-label">staging</div>
-                <div class="rs-facet-count">(11)</div>
-              </li>
-              <li class="rs-facet-item">
-                <div class="rs-facet-label">QE</div>
-                <div class="rs-facet-count">(8)</div>
-              </li>
-              <li class="rs-facet-item">
-                <div class="rs-facet-label">design</div>
-                <div class="rs-facet-count">(12)</div>
-              </li>
-              <li class="rs-facet-item">
-                <div class="rs-facet-label">billing</div>
-                <div class="rs-facet-count">(6)</div>
-              </li>
-              <li class="rs-facet-item">
-                <div class="rs-facet-label">utiliy</div>
-                <div class="rs-facet-count">(3)</div>
-              </li>
-              <li class="rs-facet-item">
-                <div class="rs-facet-label">comms</div>
-                <div class="rs-facet-count">(8)</div>
-              </li>
-              <li class="rs-facet-item">
-                <div class="rs-facet-label">marketing</div>
-                <div class="rs-facet-count">(8)</div>
-              </li>
-              <li class="rs-facet-item">
-                <div class="rs-facet-label">sales</div>
-                <div class="rs-facet-count">(8)</div>
-              </li>
-              <li class="rs-facet-section-toggle">
-                <i class="rs-arrow"></i>less
+                <i class="rs-facet-toggle-arrow"></i>more
               </li>
             </ul>
           </div>
